--- a/index.html
+++ b/index.html
@@ -1,1 +1,61 @@
-hello
+<!-- TradingView Widget BEGIN -->
+<div class="tradingview-widget-container">
+  <div class="tradingview-widget-container__widget"></div>
+  <div class="tradingview-widget-copyright"><a href="https://www.tradingview.com/markets/" rel="noopener" target="_blank"><span class="blue-text">Markets today</span></a> by TradingView</div>
+  <script type="text/javascript" src="https://s3.tradingview.com/external-embedding/embed-widget-ticker-tape.js" async>
+  {
+  "symbols": [
+    {
+      "description": "S&P 500",
+      "proName": "CME_MINI:ES1!"
+    },
+    {
+      "description": "NQ",
+      "proName": "CME_MINI:NQ1!"
+    },
+    {
+      "description": "DXY",
+      "proName": "CAPITALCOM:DXY"
+    },
+    {
+      "description": "FEDFUNDS",
+      "proName": "FRED:FEDFUNDS"
+    },
+    {
+      "description": "INTRATES",
+      "proName": "ECONOMICS:USINTR"
+    },
+    {
+      "description": "APPL",
+      "proName": "NASDAQ:AAPL"
+    },
+    {
+      "description": "AMZN",
+      "proName": "NASDAQ:AMZN"
+    },
+    {
+      "description": "TSLA",
+      "proName": "NASDAQ:TSLA"
+    },
+    {
+      "description": "NVDA",
+      "proName": "NASDAQ:NVDA"
+    },
+    {
+      "description": "AMD",
+      "proName": "NASDAQ:AMD"
+    },
+    {
+      "description": "GOOGL",
+      "proName": "NASDAQ:GOOGL"
+    }
+  ],
+  "showSymbolLogo": true,
+  "colorTheme": "dark",
+  "isTransparent": false,
+  "displayMode": "adaptive",
+  "locale": "en"
+}
+  </script>
+</div>
+<!-- TradingView Widget END -->
